--- a/assets/css/material-tokens.css
+++ b/assets/css/material-tokens.css
@@ -83,6 +83,7 @@
 	--content-width: 720px;
 	--wide-width: 1140px;
 	--gutter: clamp(1rem, 4vw, 2.5rem);
+	--header-h: 64px;
 
 	/* ---- Elevation (monochrome shadows) ---- */
 	--elev-0: none;
